Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Notable changes
-
-
Q2/2026 Server Maintenance
Description
The data in MEMORY tables is temporary and is lost when the server restarts.
To represent this recreation with no data, the server logs a TRUNCATE statement to the binary log.
However, there is no warning about MEMORY tables losing data after a reboot, let alone this TRUNCATE log entry.
Worse, this TRUNCATE entry is not immediately written during startup, but rather when the MEMORY table is accessed.
This means that any desynchronization error (due to data loss) does not occur during the restart phase in maintenance, but instead unexpectedly during operation.
Namely, MDEV-29796 reported that --gtid-strict-mode checks would fail (if the server does not have a different Domain ID from its replication upstreams).
Attachments
Issue Links
- causes
-
MDEV-29796 Auto-generated DELETE for MEMORY/HEAP table can break GTID-based replication
-
- Closed
-
- relates to
-
MDEV-20106 Automatic provisioning of slave memory table in strict-mode
-
- Open
-
- split to
-
MDEV-39335 Do not replicate memory tables by default
-
- Open
-